Fixed "Access denied" error in post-build event.
Using a workaround: Make a temporary copy of the .exe, run InsertIcons
on that copy, then move it back over the original.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -260,7 +260,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(ProjectDir)InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)CAMMFile.ico"</PostBuildEvent>
+    <PostBuildEvent>copy /Y /B "$(TargetPath)" "$(TargetPath).tmp"
+"$(ProjectDir)InsertIcons.exe" "$(TargetPath).tmp" "$(ProjectDir)CAMMFile.ico"
+move /Y "$(TargetPath).tmp" "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
