--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
@@ -76,7 +76,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="Nini">
-      <HintPath>..\..\DLL Assets\Nini.dll</HintPath>
+      <HintPath>lib\Nini.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
