Added a basic Level and Map class.
Moved several map and level related variables into their respective
classes.
Changed code referring to those variables to use the new classes.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -94,6 +94,8 @@
     <Compile Include="FRMMapProperties.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Level.vb" />
+    <Compile Include="Map.vb" />
     <Compile Include="Unit.vb" />
     <Compile Include="FRMExportAS.Designer.vb">
       <DependentUpon>FRMExportAS.vb</DependentUpon>
