Added Assets module and moved image references to it.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="Assets.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="CustomColorTable.vb" />
     <Compile Include="FRMMapProperties.Designer.vb">
