Changed Ascii array to a List(Of Char) to eliminate a few redundant functions.
Added a Config module that will be used for storing and loading
application configuration data such as that stored in the "Tiles.dat"
file.
Moved the Ascii lookup list to the Config class as that is the most
appropriate place for it.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker) VS2013.vbproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
     <Compile Include="Assets.vb" />
+    <Compile Include="Config.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="CustomColorTable.vb" />
     <Compile Include="FRMMapProperties.Designer.vb">
