--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -87,6 +87,7 @@
     <Compile Include="ApplicationEvents.vb" />
     <Compile Include="Assets.vb" />
     <Compile Include="Building.vb" />
+    <Compile Include="Config.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="CustomColorTable.vb" />
     <Compile Include="FRMMapProperties.Designer.vb">
