Tile/Building/Unit image paths now base off the 'Tile Data' folder.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Units.ini
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Units.ini
@@ -1,34 +1,34 @@
 [CAMM]
-Format = 7
+Format = 8
 
 [DEFINE UNITS]
 ; Unit Definition Format:
 ; {str_ID|i_Team|i_OffsetY|url_Image}
-Unit0 = {UB_evil|1|10|Tile Data/Units/Aliens/UB_evil.png}
-Unit1 = {UA_evil|1|10|Tile Data/Units/Aliens/UA_evil.png}
-Unit2 = {UQ_evil|1|10|Tile Data/Units/Aliens/UQ_evil.png}
-Unit3 = {UC_evil|1|20|Tile Data/Units/Aliens/UC_evil.png}
-Unit4 = {UD_evil|1|5|Tile Data/Units/Aliens/UD_evil.png}
-Unit5 = {UE_evil|1|20|Tile Data/Units/Aliens/UE_evil.png}
-Unit6 = {UF_evil|1|15|Tile Data/Units/Aliens/UF_evil.png}
-Unit7 = {UG_evil|1|18|Tile Data/Units/Aliens/UG_evil.png}
-Unit8 = {UH_evil|1|15|Tile Data/Units/Aliens/UH_evil.png}
-Unit9 = {UP_evil|1|20|Tile Data/Units/Aliens/UP_evil.png}
-Unit10 = {UM_evil|1|10|Tile Data/Units/Santa/UM_evil.png}
-Unit11 = {UN_evil|1|12|Tile Data/Units/Santa/UN_evil.png}
-Unit12 = {UB_good|0|10|Tile Data/Units/Astros/UB_good.png}
-Unit13 = {UA_good|0|10|Tile Data/Units/Astros/UA_good.png}
-Unit14 = {UC_good|0|15|Tile Data/Units/Astros/UC_good.png}
-Unit15 = {UF_good|0|10|Tile Data/Units/Astros/UF_good.png}
-Unit16 = {UD_good|0|10|Tile Data/Units/Astros/UD_good.png}
-Unit17 = {UE_good|0|17|Tile Data/Units/Astros/UE_good.png}
-Unit18 = {UG_good|0|20|Tile Data/Units/Astros/UG_good.png}
-Unit19 = {UH_good|0|7|Tile Data/Units/Astros/UH_good.png}
-Unit20 = {UP_good|0|20|Tile Data/Units/Astros/UP_good.png}
-Unit21 = {UR_good|0|5|Tile Data/Units/Astros/UR_good.png}
-Unit22 = {UI_evil|1|20|Tile Data/Units/Items/UI_evil.png}
-Unit23 = {UI_good|0|15|Tile Data/Units/Items/UI_good.png}
-Unit24 = {UO_evil|1|15|Tile Data/Units/Items/UO_evil_01.png}
-Unit25 = {UJ_good|0|15|Tile Data/Units/Items/UJ_good.png}
+Unit0 = {UB_evil|1|10|Units/Aliens/UB_evil.png}
+Unit1 = {UA_evil|1|10|Units/Aliens/UA_evil.png}
+Unit2 = {UQ_evil|1|10|Units/Aliens/UQ_evil.png}
+Unit3 = {UC_evil|1|20|Units/Aliens/UC_evil.png}
+Unit4 = {UD_evil|1|5|Units/Aliens/UD_evil.png}
+Unit5 = {UE_evil|1|20|Units/Aliens/UE_evil.png}
+Unit6 = {UF_evil|1|15|Units/Aliens/UF_evil.png}
+Unit7 = {UG_evil|1|18|Units/Aliens/UG_evil.png}
+Unit8 = {UH_evil|1|15|Units/Aliens/UH_evil.png}
+Unit9 = {UP_evil|1|20|Units/Aliens/UP_evil.png}
+Unit10 = {UM_evil|1|10|Units/Santa/UM_evil.png}
+Unit11 = {UN_evil|1|12|Units/Santa/UN_evil.png}
+Unit12 = {UB_good|0|10|Units/Astros/UB_good.png}
+Unit13 = {UA_good|0|10|Units/Astros/UA_good.png}
+Unit14 = {UC_good|0|15|Units/Astros/UC_good.png}
+Unit15 = {UF_good|0|10|Units/Astros/UF_good.png}
+Unit16 = {UD_good|0|10|Units/Astros/UD_good.png}
+Unit17 = {UE_good|0|17|Units/Astros/UE_good.png}
+Unit18 = {UG_good|0|20|Units/Astros/UG_good.png}
+Unit19 = {UH_good|0|7|Units/Astros/UH_good.png}
+Unit20 = {UP_good|0|20|Units/Astros/UP_good.png}
+Unit21 = {UR_good|0|5|Units/Astros/UR_good.png}
+Unit22 = {UI_evil|1|20|Units/Items/UI_evil.png}
+Unit23 = {UI_good|0|15|Units/Items/UI_good.png}
+Unit24 = {UO_evil|1|15|Units/Items/UO_evil_01.png}
+Unit25 = {UJ_good|0|15|Units/Items/UJ_good.png}
 
 ; CAMM Crystal Alien Map Maker (c) 2015 Leveleditor6680 // Josh
