Fixed some typos in rectangle brush configs. Removed Test configs.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -249,7 +249,19 @@
     <Content Include="Save Data\*" />
     <Content Include="Tile Data\*" />
     <Content Include="Tile Data\Brushes\*" />
-    <Content Include="Tile Data\Brushes\Rectangle\*" />
+    <Content Include="Tile Data\Brushes\Rectangle\Crystals.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Island.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Isthmus-NS.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Isthmus-WE.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Lake.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Montain.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Ridge-NS.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Ridge-WE.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\River-NS.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\River-WE.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\RockBorders.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Valley-NS.ini" />
+    <Content Include="Tile Data\Brushes\Rectangle\Valley-WE.ini" />
     <Content Include="Tile Data\Default Maps\*" />
     <Content Include="Tile Data\Buttons\*" />
     <Content Include="Tile Data\Other Data\*" />
