--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Brushes/Rectangle/Isthmus-NS.ini
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Brushes/Rectangle/Isthmus-NS.ini
@@ -1,5 +1,5 @@
 ﻿[RectPreset]
-Ttitle=Isthmus North-South
-Row1={30|37|32}
-Row2=30|37|32}
-Row3={30|37|32}
+Title=Isthmus North-South
+Row1={30|-1|32}
+Row2={30|-1|32}
+Row3={30|-1|32}
