Added a couple rectangle brush configs.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -241,6 +241,8 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="Tile Data\Brushes\Rectangle\LakeFill.ini" />
+    <None Include="Tile Data\Brushes\Rectangle\MountainFill.ini" />
   </ItemGroup>
   <ItemGroup>
     <None Include="icons\CAMMFile.ico" />
